@@ -1,6 +1,7 @@
 <div id="<{$wizmobile_dirname}>Login">
   <form action="<{$xoops_url}>/modules/<{$wizmobile_dirname}>/index.php" method="post">
     <input type="hidden" name="act" value="Login" />
+    <{wiz_gticket area=$wizmobile_dirname}>
     <input type="submit" value="<{"WIZMOBILE_LANG_SIMPLE_LOGIN"|wiz_constant}>" />
   </form>
   <span style="margin-top: 1em; color: #ff0000;"><{"WIZMOBILE_MSG_SIMPLE_LOGIN_CAUTION"|wiz_constant}></span>
